$Id$
            
            [- Version 2.1.27 -]
2006-11-19: multilet.lisp: Convention for new variables changed: macro
            var bound to run-time var with name #:v-27 is v$ (not -v-,
            which looks too much like some kind of segment).
            
            debug.lisp: Fixed bug whereby all unlabeled values of forms
            were being discarded.  Now they are all saved, with names
            *, */, *//, *///, */4, etc.

            [- Version 2.1.24 -]
2006-11-09: debug.lisp: Changed conventions so all values of form in
            (ev form -vars-) are returned, except for vars enclosed in
            parens. 

2006-08-19: ytload/ytload.lisp: Replaced occurrence of 'memq' with
            'member' in 'yt-load'.  Added comment to clarify how
            :if-installed ':start-over works.

            [- Version 2.1.22 2006/08/04 14:08:07 airfoyle Exp -]
2006-08-02: YTools loader and installer now print version number.

            [- Version 2.1.21 2006/07/24 11:43:00 airfoyle Exp -]
2006-07-24: Added :end-string argument to 'test' macro.

2006-07-02: Improved format of error message in 'control-nest'.

            [- Version 2.1.20 2006/06/28 22:56:58 airfoyle Exp -]
2006-06-28: util.lisp: Corrected 'format' calls that lacked control
            strings.
            chunk.lisp: 'chunk-internal-term-mgt' didn't actually call
            'unmanage' in the case where the chunk had derivees (!).
            How did this ever work?  I fixed it.

            [- Version 2.1.19 2006/06/26 20:06:48 airfoyle Exp -]
2006-06-11: Corrected bug in Or-chunk/derive-date: If current date is
            newer than earliest disjunct, stick with current date.
            setter.lisp: In 'simple-dat-match', any quoted expression
            should return value 0, because it can contain no free
            occurrences of | dat|.

            [- Version 2.1.17 2006/05/30 13:54:47 airfoyle Exp -]
2006-05-30: Defined 'with-gen-vars', around cool new convention that